crates/tuna/tests/parser/fail/super-param-bin.som
"test:
fail-message:
  - contains: define
  - contains: super
"

SuperParamBin = (
  / super = ('rip')
)

